--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.19)
 
 find_package(BISON REQUIRED)
 find_package(FLEX REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
 
 find_library(GD_LIB gd NAMES gd bgd)
 
@@ -21,6 +23,9 @@ message(STATUS "gd includes found: ${GD_INCLUDE_DIR}")
 endif ()
 
 include_directories(${GD_INCLUDE_DIR})
+include_directories(${GTK3_INCLUDE_DIRS})
+link_directories(${GTK3_LIBRARY_DIRS})
+add_definitions(${GTK3_CFLAGS_OTHER})
 
 if (NOT WIN32)
 set(MATH "m")
@@ -48,3 +53,6 @@ add_library(fractal ${source})
 
 add_executable(lsystem main.c)
 target_link_libraries(lsystem fractal ${GD_LIB})
+
+add_executable(lsystem_gui main_gui.c)
+target_link_libraries(lsystem_gui fractal ${GD_LIB} ${GTK3_LIBRARIES})
