--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,16 @@
-project(fractal)
-
 cmake_minimum_required(VERSION 3.16)
+
+project(fractal)
 
 find_package(BISON REQUIRED)
 find_package(FLEX REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-
-find_library(GD_LIB gd NAMES gd bgd)
-
-if (GD_LIB-NOTFOUND)
-message(FATAL_ERROR "gd library not found")
-else ()
-message(STATUS "gd library found: ${GD_LIB}")
-endif ()
-
-find_path(GD_INCLUDE_DIR "gd.h" HINTS /usr/include ENV INCLUDE)
-if (GD_INCLUDE_DIR-NOTFOUND)
-message(FATAL_ERROR "gd includes not found")
-else ()
-message(STATUS "gd includes found: ${GD_INCLUDE_DIR}")
-endif ()
+pkg_check_modules(GD REQUIRED gdlib)
 
 include_directories(${GD_INCLUDE_DIR})
 include_directories(${GTK3_INCLUDE_DIRS})
+link_directories(${GD_LIBRARY_DIRS})
 link_directories(${GTK3_LIBRARY_DIRS})
 add_definitions(${GTK3_CFLAGS_OTHER})
 
@@ -52,7 +39,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_library(fractal ${source})
 
 add_executable(lsystem main.c)
-target_link_libraries(lsystem fractal ${GD_LIB} ${MATH})
+target_link_libraries(lsystem fractal ${GD_LIBRARIES} ${MATH})
 
 add_executable(lsystem_gui main_gui.c)
-target_link_libraries(lsystem_gui fractal ${GD_LIB} ${GTK3_LIBRARIES} ${MATH})
+target_link_libraries(lsystem_gui fractal ${GD_LIBRARIES} ${GTK3_LIBRARIES} ${MATH})
