Add header option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ endif ()
 set(source lsystem.c lsystem_iter.c lines_normilize.c lines_save_png.c lines_save_txt.c)
 
 flex_target(lsystem_scanner lsystem_scanner.l ${CMAKE_CURRENT_BINARY_DIR}/lsystem_scanner.c)
-flex_target(turtle_scanner turtle_scanner.l ${CMAKE_CURRENT_BINARY_DIR}/turtle_scanner.c)
+flex_target(turtle_scanner turtle_scanner.l ${CMAKE_CURRENT_BINARY_DIR}/turtle_scanner.c 
+	COMPILE_FLAGS "--header-file=${CMAKE_CURRENT_BINARY_DIR}/turtle_scanner.h")
 bison_target(lsystem_parser lsystem_parser.y ${CMAKE_CURRENT_BINARY_DIR}/lsystem_parser.c)
 
 add_flex_bison_dependency(lsystem_scanner lsystem_parser)
